# tswr_project

./: .gitignore  README.md  requirements.txt
learning_dynamics_models-master/: .gitignore  pyproject.toml
learning_dynamics_models-master/experiments/: train.py  train_distance_model.py  train_residual.py
learning_dynamics_models-master/experiments/dataset_analysis/: dataset_support_analysis.py  generate_distance_dataset.py  plot_slip_histograms.py  visualize_distance_model.py
learning_dynamics_models-master/ldm/systems/: handler.py  state_weights.py
learning_dynamics_models-master/ldm/systems/acrobot/: dataset_reader.py
learning_dynamics_models-master/ldm/systems/car/: constants.py
learning_dynamics_models-master/ldm/systems/commons/: distance_aware_wrapper.py  distance_model.py  residual_model.py
learning_dynamics_models-master/ldm/systems/f1tenth/: dataset_reader.py
learning_dynamics_models-master/ldm/systems/mlp/: cnn_vae_future_encoder.py  cnn_vae_history_encoder.py  combined_residual_model.py  mlp.py  mlp_with_history.py  residual_mlp.py  residual_model_helpers.py
learning_dynamics_models-master/ldm/systems/vector_field/: dataset_reader.py
learning_dynamics_models-master/ldm/systems/vw_golf/: dataset_reader.py
learning_dynamics_models-master/ldm/utils/: bspline.py  bspline_torch.py  casadi_bspline.py  dataset_files_spliter.py  df_save.py  jacobian_reg.py  loading.py  plot_tire_characterisitcs.py  read_datasets.py  rollout_model.py  rollout_model_with_history.py  state_extender.py
learning_dynamics_models-master/tests/: test_dugoff_casadi.py  test_exp_tanh_casadi.py  test_linear_casadi.py  test_neural_casadi.py  test_neural_exp_tanh_casadi.py  test_pacejka_single_track_casadi.py
racetrack/: README.md  pyproject.toml
racetrack/racetrack/: __init__.py  racetrack.py  utils.py
racetrack/racetrack/tracks/: abudhabi.csv  bean.csv  cw_usa_v5.csv  donut.csv  haribo_v2.csv  icra23_new_1cm_centerline.csv  icra23_new_2cm_centerline.csv  icra_2023.csv  icra_2024.csv  l.csv  lab_monza.csv  lab_monza_iros2026.csv  lab_monza_v2.csv  lab_usa_v3.csv  long_track.csv  ml_track.csv  ml_wide_playground.csv  oval.csv  pizza.csv  track-1.csv  usa.csv
racetrack/tests/: load_track_test.py
racing_env-new_obs_handling/: .gitignore  README.md  pyproject.toml
racing_env-new_obs_handling/racing_env/: __init__.py
racing_env-new_obs_handling/racing_env/config/obs/: friction.yaml  obs_config.yaml  obs_config_all.yaml  obs_config_all_no_delay.yaml  obs_config_all_w.yaml  (+20 more)
racing_env-new_obs_handling/racing_env/envs/: gymnasium.py  single_track_env.py
racing_env-new_obs_handling/racing_env/utils/: constants.py  controls.py  defaults.py  delay_fifo.py  friction_utils.py  graphics.py  history_buffer.py  integrator.py  metrics.py  obs_config.py  obs_randomizer.py  param_randomizer.py  state_wrapper.py  steering_modules.py  time_delay_const_slope.py  time_delay_first_order.py  track_geometry.py  tracks.py  utils.py
racing_env-new_obs_handling/results/42/: args.json
racing_env-new_obs_handling/tests/: gym_env_test.py  sim_test.py
(+172 files in other folders)
